项目初始化

--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,9 @@
     </properties>
     <modules>
         <module>wink-summer</module>
-        <module>wink-console</module>
+       <!-- <module>wink-console</module>-->
         <module>wink-common</module>
+        <module>wink-startup</module>
     </modules>
     <dependencies>
         <dependency>
